# bevy_easy_portals

./: Cargo.toml  README.md
assets/: portal.wgsl
examples/: basic.rs  mesh_picking.rs  mirror.rs  teleport.rs
src/: camera.rs  gizmos.rs  lib.rs  material.rs  picking.rs  projection.rs
