[package]
name = "bevy_easy_portals"
version = "0.5.0"
edition = "2024"
description = "Bevy plugin for easy-to-use portals."
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chompaa/bevy_easy_portals"
documentation = "https://docs.rs/bevy_easy_portals"
exclude = [".github"]

[dependencies]
uuid = { version = "1.11.0", features = ["v4"], optional = true }

[dependencies.bevy]
version = "0.17.0-dev"
git = "https://github.com/bevyengine/bevy.git"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_log",
]

[dev-dependencies.bevy]
version = "0.17.0-dev"
git = "https://github.com/bevyengine/bevy.git"

[features]
default = []
gizmos = ["bevy/bevy_gizmos"]
picking = ["bevy/bevy_picking", "dep:uuid"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"

[[example]]
name = "mesh_picking"
required-features = ["picking"]

[[example]]
name = "mirror"

[[example]]
name = "teleport"
